Fix header spacing

--- a/styles.scss
+++ b/styles.scss
@@ -70,12 +70,15 @@ p {
   top: 0;
   z-index: 10;
   transition: box-shadow 250ms ease-in-out;
+  display: flex;
+  align-items: center;
 
   &__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.3rem;
+    width: 100%;
+    padding: 0 1.3rem;
   }
 
   .logo {
